--- a/main.css
+++ b/main.css
@@ -1,49 +1,188 @@
-.content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Fira Mono', monospace;
+    background: #333;
+    color: #fff;
+    height: 100vh;
+    line-height: 1.6;
+    overflow: hidden;
+    background-color: rgb(22, 22, 22);
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    /* CSS Smooth Scroll */
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+}
+
+.lead {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    width: 100%;
+    height: 100vh;
+    /* Scroll Snap */
+    scroll-snap-align: center;
 }
 
-h1 {
-    color: white;
-    font-family: 'Franklin Gothic Medium';
-    font-size: 4em;
+section#about {
+    text-align: justify;
 }
 
-a {
+section h1 {
+    font-size: 4rem;
+}
+
+section h2 {
+    font-size: 3rem;
+}
+
+.menu {
+    list-style: none;
+}
+
+.menu li {
+    display: inline;
+    padding: 0 10px;
+    border-left: solid 1px white;
+}
+
+.menu li:first-child {
+    border-left: none;
+}
+
+ul {
+    padding-inline-start: 0px;
+}
+
+li a {
     font-size: 1.5em;
     margin: 10px;
     color: gray;
     text-decoration: none;
 }
 
-a:hover {
-    color: rgb(255, 255, 255);
+li a:hover {
+    color: rgb(192, 191, 191);
 }
 
-body {
-    background-color: rgb(31, 31, 31);
-    color: white;
-    font-family: 'Franklin Gothic Medium';
+.link {
+    color: rgb(0, 119, 255);
+    text-decoration: none;
 }
 
-#menu {
-    list-style: none;
+.link:hover {
+    color: rgb(0, 162, 255);
 }
 
-#menu li {
-    display: inline;
-    padding: 0 10px;
-    border-left: solid 1px white;
+.sticky {
+    position: fixed;
+    top: 100;
+    width: 100%;
 }
 
-#menu li:first-child {
-    border-left: none;
+.header {
+    background-color: #f1f1f1;
+    padding: 30px;
+    text-align: center;
 }
 
-ul {
-    padding-inline-start: 0px;
+img {
+    border-radius: 50%;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.responsive {
+    max-width: 300px;
+    width: 80%;
+    height: auto;
+}
+
+p.responsive {
+    max-width: 600px;
+    width: 80%;
+    height: auto;
+}
+
+.distort {
+    animation: glitch 1s linear infinite;
+    font-size: 4em;
+    font-weight: 300;
+}
+
+@keyframes glitch {
+    2%,
+    64% {
+        transform: translate(2px, 0) skew(0deg);
+    }
+    4%,
+    60% {
+        transform: translate(-2px, 0) skew(0deg);
+    }
+    62% {
+        transform: translate(0, 0) skew(5deg);
+    }
+}
+
+.distort:before,
+.distort:after {
+    content: attr(title);
+    position: absolute;
+    left: 0;
+}
+
+.distort:before {
+    animation: glitchTop 1s linear infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+@keyframes glitchTop {
+    2%,
+    64% {
+        transform: translate(2px, -2px);
+    }
+    4%,
+    60% {
+        transform: translate(-2px, 2px);
+    }
+    62% {
+        transform: translate(13px, -1px) skew(-13deg);
+    }
+}
+
+.distort:after {
+    animation: glitchBotom 1.5s linear infinite;
+    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+@keyframes glitchBotom {
+    2%,
+    64% {
+        transform: translate(-2px, 0);
+    }
+    4%,
+    60% {
+        transform: translate(-2px, 0);
+    }
+    62% {
+        transform: translate(-22px, 5px) skew(21deg);
+    }
 }
