--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ body {
 .lead {
     font-size: 1.5rem;
     margin-bottom: 20px;
+    max-width: 90%;
 }
 
 section {
@@ -34,14 +35,21 @@ section {
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     /* Scroll Snap */
-    scroll-snap-align: center;
 }
 
 section#about {
     text-align: justify;
+    background-color: rgb(51, 51, 51);
+    color: rgb(207, 207, 207);
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+
+section#contact {
+    background-color: #fff;
+    color: rgb(51, 51, 51);
 }
 
 section h1 {
@@ -64,6 +72,11 @@ section h2 {
 
 .menu li:first-child {
     border-left: none;
+}
+
+#title {
+    text-decoration: none;
+    color: white
 }
 
 ul {
@@ -110,20 +123,18 @@ img {
 
 .responsive {
     max-width: 300px;
-    width: 80%;
+    width: 90%;
     height: auto;
 }
 
 p.responsive {
     max-width: 600px;
-    width: 80%;
+    width: 90%;
     height: auto;
 }
 
 .distort {
     animation: glitch 1s linear infinite;
-    font-size: 4em;
-    font-weight: 300;
 }
 
 @keyframes glitch {
@@ -185,4 +196,20 @@ p.responsive {
     62% {
         transform: translate(-22px, 5px) skew(21deg);
     }
+}
+
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+
+.sticky+.content {
+    padding-top: 102px;
 }
