--- a/main.css
+++ b/main.css
@@ -40,14 +40,25 @@ section {
     scroll-snap-align: center;
 }
 
+.cv_section {
+    width: 90%;
+    max-width: 1000px;
+}
+
 section#about {
     text-align: justify;
     background-color: rgb(51, 51, 51);
     color: rgb(207, 207, 207);
 }
 
+section#resume {
+    background-color: rgb(20, 20, 20);
+    color: rgb(190, 190, 190);
+    text-align: left;
+}
+
 section#contact {
-    background-color: #fff;
+    background-color: rgb(214, 214, 214);
     color: rgb(51, 51, 51);
 }
 
@@ -107,6 +118,11 @@ li a:hover {
     position: fixed;
     top: 100;
     width: 100%;
+}
+
+.comment {
+    color: rgb(0, 119, 0);
+    font-style: italic;
 }
 
 .header {
