--- a/main.css
+++ b/main.css
@@ -7,11 +7,11 @@
 body {
     font-family: 'Fira Mono', monospace;
     background: #333;
-    color: #fff;
+    color: rgb(184, 184, 184);
     height: 100vh;
     line-height: 1.6;
     overflow: hidden;
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(20, 20, 20);
 }
 
 .container {
@@ -25,7 +25,18 @@ body {
 
 .lead {
     font-size: 1.5rem;
+    max-width: 90%;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.employer p {
+    font-style: italic;
+}
+
+#intro {
     margin-bottom: 20px;
+    font-size: 1.5rem;
     max-width: 90%;
 }
 
@@ -36,30 +47,27 @@ section {
     justify-content: center;
     text-align: center;
     min-height: 100vh;
-    /* Scroll Snap */
-    scroll-snap-align: center;
 }
 
 .cv_section {
     width: 90%;
-    max-width: 1000px;
+    max-width: 800px;
+    margin-bottom: 10px;
+}
+
+.position {
+    margin-bottom: 30px;
 }
 
 section#about {
     text-align: justify;
-    background-color: rgb(51, 51, 51);
-    color: rgb(207, 207, 207);
+    padding-bottom: 10px;
 }
 
 section#resume {
-    background-color: rgb(20, 20, 20);
-    color: rgb(190, 190, 190);
     text-align: left;
-}
-
-section#contact {
-    background-color: rgb(214, 214, 214);
-    color: rgb(51, 51, 51);
+    padding-bottom: 20px;
+    padding-top: 10px;
 }
 
 h1 {
@@ -83,11 +91,6 @@ h2 {
 
 .menu li:first-child {
     border-left: none;
-}
-
-#title {
-    text-decoration: none;
-    color: white
 }
 
 ul {
@@ -125,6 +128,26 @@ li a:hover {
     font-style: italic;
 }
 
+.employer {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (min-width: 751px) {
+    .employer {
+        flex-direction: row;
+    }
+}
+
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+
+@media screen and (max-width: 750px) {
+    .employer {
+        flex-direction: column;
+    }
+}
+
 .header {
     background-color: #f1f1f1;
     padding: 30px;
@@ -144,7 +167,7 @@ img {
 }
 
 p.responsive {
-    max-width: 600px;
+    max-width: 800px;
     width: 90%;
     height: auto;
     margin-bottom: 20px;
