--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@ section {
     justify-content: center;
     text-align: center;
     min-height: 100vh;
+    scroll-snap-align: start;
 }
 
 .cv_section {
@@ -67,7 +68,6 @@ section#about {
 section#resume {
     text-align: left;
     padding-bottom: 20px;
-    padding-top: 10px;
 }
 
 h1 {
